--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
   </head>
   <body>
-                <h1 >Большой Дом Наркомфина</h1>
-    <p style="color:red;">Дом Наркомфина — жилой дом «переходного типа», построенный <a href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">в 1930</a> году по проекту архитекторов Моисея Гинзбурга, Игнатия Милиниса и инженера Сергея Прохорова[1] для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.</p>
+                <h1 >Дом Наркомфина</h1>
+    <p>Жилой дом «переходного типа», построенный <a href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4">в 1930</a> году по проекту архитекторов Моисея Гинзбурга, Игнатия Милиниса и инженера Сергея Прохорова[1] для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.</p>
 
     <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение»[2].</p>
 
